@@ -1,6 +1,7 @@
 2006-06-29  MenTaLguY  <mental@rydia.net>
 
-	* src/desktop.cpp, src/desktop.h, src/widgets/desktop-widget.cpp,
+	* src/desktop.cpp, src/desktop.h, src/sp-gradient.cpp,
+	  src/sp-gradient.cpp, src/widgets/desktop-widget.cpp,
 	  src/widgets/desktop-widget.h, src/widgets/gradient-image.cpp,
 	  src/widgets/gradient-image.h, src/widgets/gradient-toolbar.cpp,
 	  src/widgets/gradient-toolbar.cpp:
